--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "cookie-parser": "^1.4.7",
     "framer-motion": "^12.6.3",
     "jwt-decode": "^4.0.0",
-    "next": "15.1.7",
+    "next": "^15.4.6",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
