--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate",
+    "postinstall": "npx prisma generate",
     "migrate:deploy": "prisma migrate deploy"
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^6.14.0",
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
     "framer-motion": "^12.6.3",
@@ -28,8 +29,9 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.1.7",
+    "eslint-config-next": "15.4.6",
     "postcss": "^8",
+    "prisma": "^6.14.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
