--- a/package.json
+++ b/package.json
@@ -33,6 +33,10 @@
     "postcss": "^8",
     "prisma": "^6.14.0",
     "tailwindcss": "^3.4.1",
+    "tsx": "^4.20.5",
     "typescript": "^5"
+  },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
   }
 }
