--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,6 +27,6 @@
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"],
   "typeRoots": ["./types", "./node_modules/@types"],
-  "types": ["next-auth"]
+  "types": ["next-auth", "react", "react-dom", "node"]
   
 }
