--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,5 +19,5 @@
     "paths": { "@/*": ["./*"] }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules", ".next", "backend-legacy", "backend-legacy/**/*"]
+  "exclude": ["node_modules", ".next", "backend-legacy", "backend-legacy/**/*","lib/auth.disabled.ts" ]
 }
