--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,6 @@
     "plugins": [{ "name": "next" }],
     "paths": { "@/*": ["./*"] }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "**/*.d.ts"],
   "exclude": ["node_modules", ".next", "backend-legacy", "backend-legacy/**/*","lib/auth.disabled.ts" ]
 }
